upd openapi, edit app workouts, add d_filters in settings
